# FrameCapturer

./: .gitignore  .gitmodules  README _EN.md  README.md  README_EN.md  SConstruct  setup.bat
FrameCapturer/Assets/: ExrGBufferTest.unity  ExrTest.unity  FrameCapturerPackaging.cs  FrameRecorderTest.unity  GifTest.unity  RaymarchingExrTest.unity  RaymarchingGifTest.unity  RaymarchingMP4Test.unity  Test.unity  TestExrPng.unity  TestGif.unity  TestMP4.unity  TestOffscreen.unity
FrameCapturer/Assets/Editor/ImageEffects/: EdgeDetectionEditor.cs
FrameCapturer/Assets/FrameCapturer/Example/: ExrCapturerExample.unity  ExrGBufferCapturerExample.unity  GifCapturerExample.unity
FrameCapturer/Assets/Raymarching/: Raymarcher.cs  Raymarcher.mat  Raymarcher.shader  distance_functions.cginc  foundation.cginc
FrameCapturer/Assets/TestData/: RenderTarget.renderTexture
FrameCapturer/Assets/Utilities/: CameraControl.cs
FrameCapturer/ProjectSettings/: AudioManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  NetworkManager.asset  Physics2DSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset  TagManager.asset  TimeManager.asset  UnityAdsSettings.asset  UnityAnalyticsManager.asset  UnityConnectSettings.asset
Plugin/: AddLibraryPath.cpp  AddLibraryPath.vcxproj  CMakeLists.txt  Foundation.vcxproj  Foundation.vcxproj.filters  FrameCapturer.cpp  FrameCapturer.h  FrameCapturer.sln  FrameCapturer.vcxproj  FrameCapturer.vcxproj.filters  FrameCapturerConfig.h  FrameCapturer_EXR.vcxproj  FrameCapturer_EXR.vcxproj.filters  FrameCapturer_MP4.vcxproj  FrameCapturer_MP4.vcxproj.filters  FrameCapturer_PNG.vcxproj  FrameCapturer_PNG.vcxproj.filters  FrameCapturer_WebM.vcxproj  FrameCapturer_WebM.vcxproj.filters  FrameCapturer_x86.def  build.bat  fcExrFile.cpp  fcExrFile.h  fcFoundation.h  fcGifFile.cpp  fcGraphicsDevice.cpp  fcGraphicsDevice.h  fcGraphicsDeviceD3D11.cpp  fcGraphicsDeviceD3D9.cpp  fcGraphicsDeviceOpenGL.cpp  fcMP4File.cpp  fcMP4File.h  fcThreadPool.cpp  fcThreadPool.h  fccore.sln  fccore.vcxproj  fccore.vcxproj.filters  pch.cpp  pch.h  setup.bat  (+1 more)
Plugin/Encoder/: fcAACEncoder.cpp  fcAACEncoder.h  fcAACEncoderFAAC.cpp  fcAACEncoderIntel.cpp  fcAMDH264Encoder.cpp  fcColorSpace.cpp  fcColorSpace.h  fcExrContext.cpp  fcExrContext.h  fcExrFile.cpp  fcExrFile.h  fcFAACEncoder.cpp  fcGifContext.cpp  fcGifContext.h  fcGifFile.cpp  fcGifFile.h  fcH264Encoder.cpp  fcH264Encoder.h  fcH264EncoderAMD.cpp  fcH264EncoderIntel.cpp  fcH264EncoderNVIDIA.cpp  fcH264EncoderOpenH264.cpp  fcI420.cpp  fcI420.h  fcMP4Context.cpp  fcMP4Context.h  fcMP4File.cpp  fcMP4File.h  fcMP4FileStream.cpp  fcMP4Internal.h  fcMP4Muxer.cpp  fcMP4Muxer.h  fcMP4StreamWriter.cpp  fcMP4StreamWriter.h  fcMP4Writer.cpp  fcMP4Writer.h  fcNVH264Encoder.cpp  fcOpenH264Encoder.cpp  fcOpusEncoder.cpp  fcPngContext.cpp  (+17 more)
Plugin/Encoder/Windows/: fcMP4_WMF.cpp  fcMP4_WMF.h
Plugin/Foundation/: Buffer.h  Compression.cpp  ConvertKernel.ispc  I420.cpp  I420.h  Misc.cpp  Misc.h  Network.cpp  PixelFormat.cpp  PixelFormat.h  TaskQueue.cpp  TaskQueue.h  YUV.cpp  YUV.h  fcFoundation.h
Plugin/GraphicsDevice/: fcGraphicsDevice.cpp  fcGraphicsDevice.h  fcGraphicsDeviceD3D11.cpp  fcGraphicsDeviceD3D9.cpp  fcGraphicsDeviceOpenGL.cpp
Plugin/Test/: CMakeLists.txt  ExrTest.cpp  GifTest.cpp  GraphicsDevice.cpp  MP4Test.cpp  Test.vcxproj  TestCommon.cpp  TestCommon.h  pch.h
Plugin/Tests/: ConvertTest.cpp  ExrTest.cpp  ExrTest.vcxproj  FlacTest.cpp  GifTest.cpp  GifTest.vcxproj  GraphicsDevice.cpp  MP4Test.cpp  MP4Test.vcxproj  MemoryLeakBuster.cpp  OggTest.cpp  PngTest.cpp  PngTest.vcxproj  Test.cpp  Test.vcxproj  TestCommon.cpp  TestCommon.h  TestFAACSelfBuild.cpp  WaveTest.cpp  WebMTest.cpp  pch.h
Plugin/cmake/: FindFLAC.cmake  FindOgg.cmake  FindOpus.cmake  FindVPX.cmake  FindVorbis.cmake  FindWEBM.cmake  FindYUV.cmake  ISPC.cmake
Plugin/fccore/: CMakeLists.txt  fcInternal.cpp  fcInternal.h  fccore.cpp  fccore.h  pch.h
Plugin/fccore/Encoder/: fcAACEncoder.h  fcAACEncoderFAAC.cpp  fcExrContext.cpp  fcExrContext.h  fcFlacContext.cpp  fcFlacContext.h  fcGifContext.cpp  fcGifContext.h  fcH264Encoder.h  fcH264EncoderAMD.cpp  fcH264EncoderIntel.cpp  fcH264EncoderNVIDIA.cpp  fcH264EncoderOpenH264.cpp  fcMP4Context.cpp  fcMP4Context.h  fcMP4Internal.h  fcMP4Writer.cpp  fcOggContext.cpp  fcOggContext.h  fcOpusEncoder.cpp  fcPngContext.cpp  fcPngContext.h  fcVPXEncoder.cpp  fcVPXEncoder.h  fcVorbisEncoder.cpp  fcVorbisEncoder.h  fcWaveContext.cpp  fcWaveContext.h  fcWebMContext.cpp  fcWebMWriter.cpp  jo_gif.i
Plugin/fccore/Encoder/Audio/: fcFlacContext.cpp  fcFlacContext.h  fcOggContext.cpp  fcOggContext.h  fcWaveContext.cpp  fcWaveContext.h
Plugin/fccore/Encoder/Image/: fcExrContext.cpp  fcExrContext.h  fcGifContext.cpp  fcGifContext.h  fcPngContext.cpp  fcPngContext.h
Plugin/fccore/Encoder/MP4/: fcAACEncoder.h  fcAACEncoderFAAC.cpp  fcAACEncoderIntel.cpp  fcH264Encoder.cpp  fcH264Encoder.h  fcH264EncoderIntel.cpp  fcH264EncoderNVIDIA.cpp  fcMP4Context.cpp  fcMP4Context.h  fcMP4Writer.cpp  fcMP4Writer.h  fcMP4_Linux.cpp  fcMP4_Mac.cpp  fcMP4_Windows.cpp
Plugin/fccore/Encoder/WebM/: fcOpusEncoder.cpp  fcVPXEncoder.cpp  fcVPXEncoder.h  fcVorbisEncoder.cpp  fcVorbisEncoder.h  fcWebMContext.cpp  fcWebMContext.h  fcWebMInternal.h  fcWebMWriter.cpp  fcWebMWriter.h
Plugin/fccore/Encoder/Windows/: fcMP4_WMF.cpp
Plugin/fccore/Foundation/: Buffer.cpp  Buffer.h  Compression.cpp  ConvertKernel.ispc  LazyInstance.h  Misc.cpp  Misc.h  Network.cpp  PixelFormat.cpp  PixelFormat.h  TaskGroup.cpp  TaskGroup.h  TaskQueue.cpp  TaskQueue.h  YUV.cpp  YUV.h  fcFoundation.h  fcThreadPool.cpp  fcThreadPool.h
Plugin/fccore/GraphicsDevice/: fcGraphicsDevice.cpp  fcGraphicsDevice.h  fcGraphicsDeviceD3D11.cpp  fcGraphicsDeviceD3D9.cpp  fcGraphicsDeviceOpenGL.cpp
Plugin/mp4test/: MP4Test.vcxproj  fcColorSpace.cpp  fcH264Encoder.cpp  fcH264Encoder.h  fcMP4Muxer.cpp  fcMP4Muxer.h  mp4test.cpp  nullcreate.cpp
(+203 files in other folders)
