cmake_minimum_required(VERSION 2.8)
project(fccore)

set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
include(ISPC)
include(AddPlugin)

find_package(OpenEXR QUIET)
find_package(ZLIB QUIET)
find_package(PNG QUIET)
find_package(YUV QUIET)
find_package(WEBM QUIET)
find_package(VPX QUIET)
find_package(OGG QUIET)
find_package(VORBIS QUIET)
find_package(OPUS QUIET)
find_package(FLAC QUIET)

option(FC_ENABLE_PNG "Enable Png sequence exporter." ON)
option(FC_ENABLE_EXR "Enable Exr sequence exporter." ON)
option(FC_ENABLE_GIF "Enable Gif exporter." ON)
option(FC_ENABLE_WEBM "Enable WebM exporter." ON)
if(FC_ENABLE_WEBM)
    option(FC_ENABLE_VPX "Enable VPX encoder." ON)
    option(FC_ENABLE_VORBIS "Enable vorbis encoder." ON)
    option(FC_ENABLE_OPUS "Enable opus encoder." ON)
endif()
option(FC_ENABLE_MP4 "Enable MP4 exporter." OFF)
if(FC_ENABLE_MP4)
    option(FC_ENABLE_OPENH264 "Enable OpenH264 encoder." OFF)
    option(FC_ENABLE_FAAC "Enable FAAC encoder." OFF)
endif()
option(FC_ENABLE_WAVE "Enable Wave exporter." ON)
option(FC_ENABLE_FLAC "Enable Flac exporter." ON)

option(FC_ENABLE_DEBUG "Enable debug functionalities." ON)
option(FC_ENABLE_TEST "Build test." ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(${CMAKE_SOURCE_DIR})

add_subdirectory(fccore)
add_subdirectory(Test)
